--- a/CSS/ueberMich.css
+++ b/CSS/ueberMich.css
@@ -154,3 +154,28 @@
   ::-webkit-scrollbar-thumb{
     background: #ffffff;
   }
+  @media (max-width: 600px) {
+    
+    body {
+      grid-template-columns: 1fr;
+      grid-template-rows: 73px 73px 1fr 1fr;
+      grid-template-areas:
+        "header"
+        "nav"
+        "main"
+        "aside"
+        "footer";
+    }
+  footer{
+    z-index: 0;
+  }
+  
+  
+  nav{
+    position: unset;
+    margin-top: 0;
+  }
+    nav ul{
+        display: flex;
+    }
+  }
